feat: 스트림(stream) 기능 구현